--- a/package.json
+++ b/package.json
@@ -13,19 +13,26 @@
     "@vueuse/core": "^8.9.3",
     "@vueuse/firebase": "^8.9.3",
     "@vueuse/head": "^1.1.15",
+    "autoprefixer": "^10.4.14",
     "firebase": "^9.9.0",
+    "flowbite": "^1.6.5",
+    "flowbite-vue": "^0.0.10",
     "pinia": "^2.0.14",
+    "postcss": "^8.4.23",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2",
+    "vue-tailwind": "^2.5.1",
     "vue3-google-login": "^2.0.15",
     "vuefire": "^3.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/node": "^16.11.43",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/tsconfig": "^0.1.3",
     "javascript-obfuscator": "^4.0.2",
     "npm-run-all": "^4.1.5",
+    "tailwindcss": "^3.3.2",
     "typescript": "~4.7.4",
     "vite": "^2.9.14",
     "vue-tsc": "^0.38.4"
