--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^9.9.0",
     "flowbite": "^1.6.5",
     "flowbite-vue": "^0.0.10",
+    "lazysizes": "^5.3.2",
     "pinia": "^2.0.14",
     "postcss": "^8.4.23",
     "sweetalert2": "^11.7.5",
